实现部分页面

--- a/my-app2/package.json
+++ b/my-app2/package.json
@@ -5,16 +5,22 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
+    "draft-js": "^0.10.5",
+    "draftjs-to-html": "^0.8.4",
+    "html-to-draftjs": "^1.4.0",
     "jquery": "^3.3.1",
     "multer": "^1.4.1",
     "react": "^16.6.3",
     "react-autocomplete": "^1.8.1",
     "react-cookies": "^0.1.0",
     "react-dom": "^16.6.3",
+    "react-draft-wysiwyg": "^1.12.13",
     "react-router-dom": "^4.3.1",
     "react-router-native": "^4.3.0",
-    "react-scripts": "2.1.1",
-    "semantic-ui-css": "^2.4.1"
+    "react-scripts": "^2.1.1",
+    "react-umeditor": "^1.0.12",
+    "semantic-ui-css": "^2.4.1",
+    "wangeditor": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
