--- a/my-app2/package.json
+++ b/my-app2/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd": "^3.12.1",
+    "antd-mobile": "^2.2.9",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "draft-js": "^0.10.5",
@@ -15,6 +16,7 @@
     "multer": "^1.4.1",
     "react": "^16.6.3",
     "react-autocomplete": "^1.8.1",
+    "react-avatar-editor": "^11.0.6",
     "react-cookies": "^0.1.0",
     "react-dom": "^16.6.3",
     "react-draft-wysiwyg": "^1.12.13",
@@ -41,6 +43,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "react-app-rewired": "^2.1.0",
+    "react-cropper": "^1.0.1",
     "semantic-ui-react": "^0.83.0"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
