--- a/my-app2/package.json
+++ b/my-app2/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "antd": "^3.12.1",
     "antd-mobile": "^2.2.9",
+    "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "draft-js": "^0.10.5",
@@ -18,11 +20,13 @@
     "react-autocomplete": "^1.8.1",
     "react-avatar-editor": "^11.0.6",
     "react-cookies": "^0.1.0",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.8.3",
     "react-draft-wysiwyg": "^1.12.13",
+    "react-highcharts": "^16.0.2",
     "react-router-dom": "^4.3.1",
     "react-router-native": "^4.3.0",
     "react-scripts": "^2.1.1",
+    "react-summernote": "^2.0.0",
     "react-umeditor": "^1.0.12",
     "semantic-ui-css": "^2.4.1",
     "wangeditor": "^3.1.1"
@@ -43,6 +47,9 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-plugin-import": "^1.11.0",
+    "babel-preset-env": "^1.7.0",
     "react-app-rewired": "^2.1.0",
     "react-cropper": "^1.0.1",
     "semantic-ui-react": "^0.83.0"
